--- a/src/App.css
+++ b/src/App.css
@@ -6,15 +6,21 @@
   height: 40vmin;
   pointer-events: none;
 }
-
+/* 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+} */
+.App-text {
+  color: black;
+  margin-top: 5rem;
+  font-weight: 500;
+  font-style: italic;
+  font-family: monospace;
 }
-
 .App-header {
-  background-color: #282c34;
+  background-color: #ffffff;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
@@ -22,6 +28,17 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+svg{
+  width:40px;
+  height:40px;
+  background-color: rgb(255, 255, 255);
+}
+svg * {
+  width:  40%;
+  height: 40%;
+  fill:   rgb(0, 0, 0);
 }
 
 .App-link {
